<resources>
    <string name="app_name">Broqueraje</string>

    <string name="title_activity_menu">Broqueraje</string>
    <string name="company">Logisti-k de México</string>
    <string name="slogan">Asegurate que suceda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="title_activity_viaje_curso">Viaje en curso</string>
    <string name="title_fragment_viaje_curso">Viaje en curso</string>
    <string name="title_fragment_informacion_viaje">Información del viaje</string>
    <string name="title_activity_seguimiento_viaje">Map</string>

    <string name="edittext_user">Usuario</string>
    <string name="edittext_password">Contraseña</string>
    <string name="button_login">Inicio de Sesión</string>

    <string name="text_welcome">Bienvenido</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_travel">Viaje en curso</string>
    <string name="menu_evidence">Evidencias</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_about">Acerca de...</string>
    <string name="menu_help">Ayuda</string>

    <string name="tab_travel">Viaje</string>
    <string name="tab_data">Información</string>
    <string name="tab_upload_evidence">Evidencias</string>

    <string name="button_nostatus">NINGÚN STATUS</string>
    <string name="button_llegadaorigen">LLEGADAORIGEN</string>
    <string name="button_carga">CARGA</string>
    <string name="button_ruta">RUTA</string>
    <string name="button_llegadatransfer">LLEGADATRANSFER</string>
    <string name="button_cruce">CRUCE</string>
    <string name="button_llegadadestino">LLEGADADESTINO</string>
    <string name="button_descarga">DESCARGA</string>

    <string name="folio_data">Folio</string>
    <string name="data_data">Datos</string>
    <string name="origin_data">Origen</string>
    <string name="destination_data">Destino</string>
    <string name="goods_data">Mercancía</string>
    <string name="packaging_data">Embalaje</string>
    <string name="presentation_data">Presentación</string>
    <string name="classification_data">Clasificación</string>
    <string name="description_data">Observaciones</string>
    <string name="quantity_data">Cantidad</string>
    <string name="weight_data">Peso</string>
    <string name="volume">Volumen</string>

    <string name="title_activity_acerca_de">Acerca de</string>
    <string name="footer_version">V1.101.101</string>

    <string name="section_carta_porte">Carta Porte</string>
    <string name="section_remition">Remisión</string>
    <string name="section_evidence">Evidencía</string>

    <string name="description">Descripción...</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit
        amet diam ut urna efficitur ornare. Maecenas in elit at ipsum congue congue non non sem.
        Aenean vulputate odio dolor, at ullamcorper lorem rhoncus in. Aenean accumsan id felis id
        laoreet. Phasellus molestie diam nec nulla convallis elementum. Sed aliquet tincidunt
        vulputate. Nullam maximus urna augue, sit amet pulvinar felis molestie rutrum. Maecenas nec
        sagittis neque, vitae luctus velit. Donec pharetra leo libero, vel accumsan massa luctus
        laoreet.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
