<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_incio"
            android:icon="@drawable/ic_menu_casa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viajecurso"
            android:icon="@drawable/ic_menu_avion"
            android:title="@string/menu_travel" />
        <!--<item-->
            <!--android:id="@+id/nav_evidencias"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="@string/menu_evidence" />-->
    </group>
    <item android:title="Más...">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_ajustes"
                    android:icon="@drawable/ic_help"
                    android:title="@string/menu_help" />
                <item
                    android:id="@+id/nav_acercade"
                    android:icon="@drawable/ic_info"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_Cerrar_sesion"
            android:icon="@drawable/ic_exit"
            android:title="Cerrar sesion" />
    </group>
</menu>
