<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logistik.logistikgobkg.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:adjustViewBounds="false"
            android:background="@drawable/backgroundlogin"
            android:baselineAlignBottom="false"
            android:cropToPadding="false"
            android:padding="-400dp"
            android:paddingBottom="100dp"
            android:paddingEnd="-100dp"
            android:paddingLeft="100dp"
            android:paddingRight="-200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="0.0"
            android:ems="10"
            android:hint="@string/edittext_user"
            android:inputType="textPersonName"
            android:textIsSelectable="false"
            android:drawableLeft="@drawable/ic_user"
            android:layout_marginRight="8dp"
            android:textColorHint="#ffffff"
            android:backgroundTint="#fff"
            android:drawableTint="#fff"
            android:textColor="#fff"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <EditText
            android:id="@+id/editContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.0"
            android:drawableLeft="@drawable/ic_password"
            android:ems="10"

            android:focusable="true"
            android:hint="@string/edittext_password"
            android:inputType="textPassword"
            android:textColorHint="#ffffff"
            android:backgroundTint="#fff"
            android:drawableTint="#fff"
            android:textColor="#fff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editUsuario" />

        <Button
            android:id="@+id/OnClickAPI"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/boton_login"
            android:onClick="onMenuClick"
            android:text="@string/button_login"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editContrasena"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginStart="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/iconlogistik"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginTop="110dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/logistikgo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
